2007-08-05  Inge Wallin  <inge@lysator.liu.se>

	Some trivil cleaning that I did while looking through the code to
	understand it better.
	* lib/AbstractScanlineTextureMapper.cpp,
	* lib/MarbleWidget.cpp,
	* lib/placemarkpainter.cpp,
	* lib/TileLoader.cpp,
	* lib/GlobeScanlineTextureMapper.h,
	* lib/placemarkpainter.h,
	* lib/TileLoader.h,
	* lib/GlobeScanlineTextureMapper.cpp,
	* lib/TextureTile.cpp,
	* lib/TextureTile.h,
	* lib/FlatScanlineTextureMapper.cpp:
	Cleaning

2007-08-05  Murad Tagirov  <tmurad@gmail.com>

    Added "m_visible" to KMLFeature class. MarbleModel now
    paints only folders which are visible.
    * src/lib/kml/KMLFeature.{h,cpp}
    * src/lib/kml/KMLFeatureParser.{h,cpp}
    * src/lib/MarbleModel.cpp

    Updated class diagram and kml related task list
    * projects/kml/kml-tasks
    * projects/kml/KMLClasses.xmi

2007-08-05  Murad Tagirov  <tmurad@gmail.com>

    Added new "bool firstTime" parameter to
    PlaceMarkPainter::paintPlaceFolder method.
    * src/lib/placemarkpainter.{h,cpp}
    * src/lib/MarbleModel.{h,cpp}

2007-08-05  Torsten Rahn <rahn@kde.org>
	- Applied patch from "Prashanth Udupa" <prashanth.udupa@gmail.com>
	Thanks for the patch and for the awesome blog entry at:
	http://prashanthudupa.livejournal.com/

2007-08-04  Inge Wallin  <inge@lysator.liu.se>

	Fix Krazy issue 14: inline methods in public classes.
	* src/lib/placemarkmodel.{h,cpp}: Move all inline methods to .cpp
	file
	* src/lib/PlaceMarkContainer.{h,cpp}: Move all inline methods to
	.cpp file

	Fix Krazy issue 12: validity of i18n calls.
	* src/KdeMainWindow.cpp (exportMapScreenShot): Add a context to
	the i18n call.

	Fix Krazy issue 8: public classes with private members
	* src/lib/MarbleControlBox.{h,cpp}: d-pointerify the private
	members that point to the tabs in the widget.

2007-08-04  Murad Tagirov  <tmurad@gmail.com>

    Added basic support of kml folders. MarbleModel iterates over list